fix mobile neck view

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Komuz chords</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet">
-    <script defer type="module" src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
 
@@ -104,7 +104,7 @@
                 </div>
             </form>
         <div class="paper">
-            <div class="js-data-root">
+            <div class="js-data-root data-root">
 
             </div>
 
