add new chord types

--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
                             <input type="radio" name="chordType" value="minor" class="visually-hidden choose-input" required>
                             <span class="choose-item">Минор</span>
                         </label>
+                        <label >
+                            <input type="radio" name="chordType" value="sus2" class="visually-hidden choose-input" required>
+                            <span class="choose-item">Sus2</span>
+                        </label>
+                        <label >
+                            <input type="radio" name="chordType" value="sus4" class="visually-hidden choose-input" required>
+                            <span class="choose-item">Sus4</span>
+                        </label>
+                        <label >
+                            <input type="radio" name="chordType" value="major7" class="visually-hidden choose-input" required>
+                            <span class="choose-item">Мажорный септ</span>
+                        </label>
+                        <label >
+                            <input type="radio" name="chordType" value="minor7" class="visually-hidden choose-input" required>
+                            <span class="choose-item">Минорный септ</span>
+                        </label>
                     </fieldset>
                 </div>
             </form>
