--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="QAVt78FNkgxozo2Czpc5g4K5H6X9UtjEEu5M5dBSQKg" />
     <meta name="robots" content="index, follow">
     <meta name="description" content="Приложение-генератор схем аккордов для национального кыргызского инструмента комуз">
     <meta name="keywords" content="комуз, аккорд, подбор, генератор аккордов, чертмек, чың толгоо, бош толгоо, оң толгоо, сол толгоо, Am, Dm, H7, Em, E, A, D, G, C">
